--- a/globals.css
+++ b/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#__next,
+#__next > div {
+  width: 100%;
+  height: 100%;
+}
